<resources>
    <string name="app_name">open classrooms</string>
    <string name="auth_button_text">Verify</string>
    <string name="auth_code_instruction">Enter verification code sent to you…</string>
    <string name="auth_activity_title">Open Classrooms</string>
    <string name="main_app_title">Open Classrooms</string>
    <string name="splash_text">class rescheduling assistant</string>
    <string name="splash_ocr_text">-open classrooms-</string>
    <string name="ocr_logo">ocr logo</string>
    <string name="auth_login_note">open classrooms will need your google account to sign you up</string>
    <string name="open_classrooms">Open Classrooms</string>
    <string name="auth_call_to_action">class shifts makes it difficult rescheduling classes and finding empty classrooms as a course rep ? let ocr help :)</string>
    <string name="error_sigining_in">Sorry, failed to sign you in. Try again</string>
    <string name="sign_in_btn">sign in</string>
    <string name="network_connection_msg">Network connection not available</string>
    <string name="poor_net_connection_msg">Oops, you seem not to have internet connection</string>
    <string name="home_day_welcome">Hello, it\'s [Replace with day]</string>
    <string name="profile_text_welcome">Welcome</string>
    <string name="update_profile_button">Update Profile</string>
    <string name="delete_my_account_button">Delete my account</string>
    <string name="no_search_result_text">Here looks emtpy, Search for a classroom <br/> to see when its free.</string>
    <string name="home_bottom_nav">Home</string>
    <string name="find_bottom_nav">Find</string>
    <string name="profile_bottom_nav">Profile</string>
    <string name="search_frag_header_text">Find a classroom</string>
    <string name="search_frag_search_box">Enter classroom to search</string>
    <string name="profile_frag_username">Username</string>
    <string name="profile_frag_name">Name</string>
    <string name="profile_frag_course_program">Course Program</string>
    <string name="profile_frag_year">Year</string>
    <string name="home_frag_upcoming">Upcoming</string>
    <string name="home_frag_available">Available</string>
    <string name="booked">Booked</string>
    <string-array name="upcoming_time">
        <item>View All</item>
        <item>8am - 9am</item>
        <item>9am - 10am</item>
        <item>10:30am - 11:30am</item>
        <item>11:30am - 12:30pm</item>
        <item>1pm - 2pm</item>
        <item>2pm - 3pm</item>
        <item>3pm - 4pm</item>
        <item>4pm - 5pm</item>
        <item>5pm - 6pm</item>
    </string-array>
    <string-array name="upcoming_time_class_dialog">
        <item>View All</item>
        <item>8:00am - 9:00am</item>
        <item>9:00am - 10:00am</item>
        <item>10:30am - 11:30am</item>
        <item>11:30am - 12:30pm</item>
        <item>13:00pm - 14:00pm</item>
        <item>14:00pm - 15:00pm</item>
        <item>15:00pm - 16:00pm</item>
        <item>16:00pm - 17:00pm</item>
        <item>17:00pm - 18:00pm</item>
    </string-array>
</resources>