<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home_menu"
        android:title="@string/home_bottom_nav"
        android:icon="@drawable/ic_home" />

    <item android:id="@+id/search_menu"
        android:title="@string/find_bottom_nav"
        android:icon="@drawable/ic_search_bb" />

    <!-- TODO: disabling booked feature, implementation will exceed deadline
    TODO: t.o.l -->
    <!--<item android:id="@+id/booked_menu"
        android:title="@string/booked"
        android:icon="@drawable/ic_booked_list" />-->

    <item android:id="@+id/profile_menu"
        android:title="@string/profile_bottom_nav"
        android:icon="@drawable/ic_account_circle_bb"/>
</menu>