<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/auth_parent_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ic_auth_image"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_ocr"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/auth_ocr_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/work_sans"
        android:textColor="@android:color/black"
        android:text="@string/open_classrooms"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ic_auth_image"
        app:layout_constraintStart_toEndOf="@id/ic_auth_image"
        app:layout_constraintTop_toTopOf="@id/ic_auth_image"
        app:layout_constraintVertical_bias="0.32" />

    <ImageView
        android:id="@+id/auth_avatar"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:src="@drawable/auth_avatar_grey"
        app:layout_constraintBottom_toTopOf="@id/auth_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_auth_image"
        app:layout_constraintVertical_bias="0.29000002" />

    <TextView
        android:id="@+id/auth_call_to_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_call_to_action"
        android:fontFamily="@font/lato_light"
        android:gravity="center"
        android:textSize="14sp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        app:layout_constraintTop_toBottomOf="@id/auth_avatar"
        app:layout_constraintStart_toStartOf="@id/auth_avatar"
        app:layout_constraintEnd_toEndOf="@id/auth_avatar"
        app:layout_constraintBottom_toTopOf="@id/auth_login_button"
        app:layout_constraintVertical_bias=".05"/>

    <ProgressBar
        android:id="@+id/auth_progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="85dp"
        android:indeterminateTint="@color/auth_button_pressed"
        style="@style/progressStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/auth_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:background="@drawable/auth_button_pressed"
        android:fontFamily="@font/lato"
        android:text="@string/sign_in_btn"
        android:textAllCaps="false"
        android:textSize="28sp"
        android:gravity="center"
        android:paddingBottom="3dp"
        android:paddingEnd="-36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/auth_login_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_login_note"
        android:fontFamily="@font/lato_light"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/auth_login_button"
        app:layout_constraintEnd_toEndOf="@id/auth_login_button"
        app:layout_constraintTop_toBottomOf="@id/auth_login_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>