<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/authViewParent"
        android:backgroundTint="@android:color/white">

        <TextView
            android:id="@+id/app_name_auth_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_activity_title"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias=".10"/>

        <TextView
            android:id="@+id/label_auth_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_code_instruction"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/auth_code_edit_text"
            app:layout_constraintStart_toStartOf="@id/auth_code_edit_text"
            app:layout_constraintEnd_toEndOf="@id/auth_code_edit_text"
            app:layout_constraintHorizontal_bias=".0"/>

        <EditText
            android:id="@+id/auth_code_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="24dp"
            android:paddingStart="8dp"
            android:background="@drawable/edittext_background"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/app_name_auth_screen"
            app:layout_constraintTop_toBottomOf="@id/app_name_auth_screen" />

        <Button
            android:id="@+id/button_auth_user"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/auth_button_text"
            android:textAllCaps="false"
            android:backgroundTint="@android:color/holo_blue_light"
            android:background="@drawable/edittext_background"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/auth_code_edit_text"
            app:layout_constraintTop_toBottomOf="@id/auth_code_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>